# kubevirt

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  a-biding.yaml  a.yaml  doc.go  go.mod  go.sum  go.work.sum  kv  nging-root.yaml  node.yaml  repo.yaml
api/openapi-spec/: swagger.json
automation/: test.sh
cmd/non-root/: BUILD.bazel  non-root.go
cmd/virt-exportproxy/: virt-exportproxy.go
cmd/virt-handler/: virt-handler.go
cmd/virt-launcher/: BUILD.bazel  bridge.conf  qemu.conf  virt-launcher.go
cmd/virt-launcher-non-root/: BUILD.bazel  non-root.go
docs/: getting-started.md
docs/devel/: guest-os-info.md
examples/: vm-alpine-datavolume.yaml  vm-cirros.yaml  vm-priorityclass.yaml  vm-template-fedora.yaml  vmi-alpine-efi.yaml  vmi-arm.yaml  vmi-ephemeral.yaml  vmi-fedora.yaml  vmi-flavor-small.yaml  vmi-gpu.yaml  vmi-kernel-boot.yaml  vmi-macvtap.yaml  vmi-masquerade.yaml  vmi-migratable.yaml  vmi-multus-multiple-net.yaml  vmi-multus-ptp.yaml  vmi-nocloud.yaml  vmi-replicaset-cirros.yaml  vmi-sata.yaml  vmi-secureboot.yaml  vmi-slirp.yaml  vmi-sriov.yaml  vmi-with-sidecar-hook.yaml
hack/: bazel-build.sh  bootstrap.sh  dockerized  generate.sh  gosec.sh  rpm-deps.sh
hack/builder/: Dockerfile  version.sh
pkg/config/: config.go
pkg/container-disk/: container-disk.go
pkg/controller/: BUILD.bazel  virtinformers.go
pkg/defaults/: defaults.go
pkg/ephemeral-disk/: ephemeral-disk.go
pkg/ephemeral-disk-utils/: BUILD.bazel  ownershipmanager.go  utils.go
pkg/host-disk/: host-disk.go
pkg/network/cache/: BUILD.bazel  infocache.go
pkg/service/: service.go
pkg/util/: util.go
pkg/util/webhooks/: tls.go
pkg/virt-api/: api.go
pkg/virt-api/rest/: BUILD.bazel  memoryhotplugsubresource.go
pkg/virt-api/webhooks/: utils.go
pkg/virt-api/webhooks/mutating-webhook/mutators/: BUILD.bazel  vmi-mutator.go  vmi-mutator_test.go
pkg/virt-api/webhooks/validating-webhook/admitters/: vmi-update-admitter.go  vms-admitter_test.go
pkg/virt-config/: feature-gates.go  virt-config.go
pkg/virt-controller/services/: BUILD.bazel  template.go  template_test.go
pkg/virt-controller/watch/: application.go  application_test.go  migration.go  migration_test.go  vm.go  vm_test.go  vmi.go  vmi_test.go
pkg/virt-controller/watch/migration/: BUILD.bazel  migration_bench_test.go  migration_test.go
pkg/virt-handler/: BUILD.bazel  non-root.go  vm.go  vm_test.go
pkg/virt-handler/cmd-client-manager/: manager.go
pkg/virt-handler/container-disk/: mount.go
pkg/virt-handler/device-manager/: common.go  generic_device.go  mediated_device.go  pci_device.go  socket_device.go
pkg/virt-handler/device-manager/usb/: BUILD.bazel  manager.go  manager_setup.go  manager_suite_test.go  manager_test.go  usb_device.go
pkg/virt-handler/isolation/: validation.go
pkg/virt-handler/migration-proxy/: BUILD.bazel  migration-proxy.go  migration-proxy_test.go
pkg/virt-handler/rest/: console.go
pkg/virt-launcher/: BUILD.bazel  fork.go  monitor.go  monitor_test.go
pkg/virt-launcher/notify-client/: client.go
pkg/virt-launcher/virtwrap/: BUILD.bazel  live-migration-source.go  live-migration-target.go  manager.go  manager_test.go
pkg/virt-launcher/virtwrap/api/: converter.go  schema.go
pkg/virt-launcher/virtwrap/converter/: converter.go  converter_test.go
pkg/virt-launcher/virtwrap/converter/arch/: amd64.go  arm64.go  converter.go  ppc64le.go  s390x.go
pkg/virt-launcher/virtwrap/device/hostdevice/generic/: BUILD.bazel  hostdev.go
pkg/virt-launcher/virtwrap/network/: BUILD.bazel  common.go  network.go  podinterface.go  podinterface_test.go
pkg/virt-launcher/virtwrap/network/cache/: infocache.go
pkg/virt-launcher/virtwrap/network/dhcp/: dhcp.go
pkg/virt-launcher/virtwrap/util/: libvirt_helper.go
pkg/virt-operator/: application.go  kubevirt.go  kubevirt_test.go  strategy_job.go
pkg/virt-operator/creation/components/: BUILD.bazel  crds.go  deployments.go  validations_generated.go
pkg/virt-operator/install-strategy/: BUILD.bazel  strategy.go  strategy_test.go  validations_generated.go
pkg/virt-operator/resource/generate/components/: BUILD.bazel  cel_test.go  crds.go  daemonsets.go  deployments.go  scc.go  validatingadmissionpolicy_test.go  validations_generated.go
pkg/virt-operator/resource/generate/install/: strategy.go  strategy_test.go
pkg/virt-operator/resource/generate/rbac/: BUILD.bazel  controller.go  handler.go  operator.go
pkg/virt-operator/resource/generate/validationpolicies/: noderestriction.go
pkg/virt-operator/util/: config.go
rpm/: BUILD.bazel
staging/src/kubevirt.io/api/usb/: BUILD.bazel  register.go
staging/src/kubevirt.io/api/usb/v1alpha1/: BUILD.bazel  deepcopy_generated.go  doc.go  register.go  types.go  types_swagger_generated.go
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
tests/: BUILD.bazel  access_test.go  canary_upgrade_test.go  clone_test.go  config_test.go  container_disk_test.go  datavolume_test.go  expose_test.go  infra_test.go  kubevirt_configmap_test.go  mdev_configuration_allocation_test.go  migration_test.go  operator_test.go  scc_test.go  security_features_test.go  storage_test.go  utils.go  vm_defaults_test.go  vm_test.go  vmi_cloudinit_test.go  vmi_configuration_test.go  vmi_controller_test.go  vmi_gpu_test.go  vmi_hook_sidecar_test.go  vmi_iothreads_test.go  vmi_kernel_boot_test.go  vmi_lifecycle_test.go  vmi_networking_test.go  vmi_sound_test.go  vmi_tpm_test.go  vmi_vsock_test.go  vmidefaults_test.go  vmipreset_test.go  vnc_test.go
tests/decorators/: decorators.go
tests/hotplug/: cpu.go
tests/libvmi/: BUILD.bazel  apply.go  config.go  storage.go  vmi.go
tests/migration/: migration.go
tests/monitoring/: vm_monitoring.go
tests/network/: vmi_multus.go  vmi_networking.go
tests/operator/: operator.go
tests/reporter/: kubernetes.go
tests/storage/: datavolume.go  export.go  hotplug.go  restore.go  snapshot.go  storage.go
tests/testsuite/: kubevirtresource.go
tools/gosec/: gosec  gosec.go  junit-gosec.xml
tools/hack/: BUILD.bazel  hack.go
tools/vms-generator/utils/: utils.go
(+11 files in other folders)
