load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["non-root.go"],
    importpath = "kubevirt.io/kubevirt/cmd/virt-launcher-non-root",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "virt-launcher-non-root",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
