load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "manager.go",
        "manager_setup.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-handler/device-manager/usb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller:go_default_library",
        "//staging/src/kubevirt.io/api/usb/v1alpha1:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)
